--- a/deep_learning_model.ipynb
+++ b/deep_learning_model.ipynb
@@ -12,16 +12,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "source": [
-    "# Installing joblib\r\n",
-    "# !pip install joblib"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "source": [
     "import pandas as pd\r\n",
@@ -533,10 +523,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "# Label encoding\n",
-    "label_encoder = LabelEncoder()\n",
-    "label_encoder.fit(y_train)\n",
-    "encoded_y_train = label_encoder.transform(y_train)\n",
+    "# Label encoding\r\n",
+    "label_encoder = LabelEncoder()\r\n",
+    "label_encoder.fit(y_train)\r\n",
+    "encoded_y_train = label_encoder.transform(y_train)\r\n",
     "encoded_y_test = label_encoder.transform(y_test)"
    ],
    "outputs": [],
