--- a/logistic_reg_model.ipynb
+++ b/logistic_reg_model.ipynb
@@ -531,12 +531,12 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "# Training the model\r\n",
-    "from sklearn.linear_model import LogisticRegression\r\n",
-    "model = LogisticRegression()\r\n",
-    "model.fit(X_train_scaled, y_train)\r\n",
-    "\r\n",
-    "print(f\"Training Data Score: {model.score(X_train_scaled, y_train)}\")\r\n",
+    "# Training the model\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "print(f\"Training Data Score: {model.score(X_train_scaled, y_train)}\")\n",
     "print(f\"Testing Data Score: {model.score(X_test_scaled, y_test)}\")"
    ],
    "outputs": [
