--- a/logistic_reg_model.ipynb
+++ b/logistic_reg_model.ipynb
@@ -611,7 +611,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 9 candidates, totalling 45 fits\n",
-      "[CV 1/5] END ................C=10, max_iter=100;, score=0.877 total time=   0.0s\n"
+      "[CV 1/5] END ................C=10, max_iter=100;, score=0.877 total time=   0.1s\n"
      ]
     },
     {
@@ -633,28 +633,7 @@
      "output_type": "stream",
      "text": [
       "[CV 2/5] END ................C=10, max_iter=100;, score=0.863 total time=   0.1s\n",
-      "[CV 3/5] END ................C=10, max_iter=100;, score=0.881 total time=   0.0s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pvpch\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV 4/5] END ................C=10, max_iter=100;, score=0.883 total time=   0.0s\n"
+      "[CV 3/5] END ................C=10, max_iter=100;, score=0.881 total time=   0.1s\n"
      ]
     },
     {
@@ -683,6 +662,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[CV 4/5] END ................C=10, max_iter=100;, score=0.883 total time=   0.0s\n",
       "[CV 5/5] END ................C=10, max_iter=100;, score=0.875 total time=   0.0s\n"
      ]
     },
@@ -690,6 +670,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\pvpch\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
       "C:\\Users\\pvpch\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -788,12 +776,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 5/5] END ................C=10, max_iter=500;, score=0.876 total time=   0.5s\n",
+      "[CV 5/5] END ................C=10, max_iter=500;, score=0.876 total time=   0.6s\n",
       "[CV 1/5] END ...............C=10, max_iter=1000;, score=0.880 total time=   0.7s\n",
       "[CV 2/5] END ...............C=10, max_iter=1000;, score=0.863 total time=   0.5s\n",
       "[CV 3/5] END ...............C=10, max_iter=1000;, score=0.879 total time=   0.5s\n",
       "[CV 4/5] END ...............C=10, max_iter=1000;, score=0.882 total time=   0.6s\n",
-      "[CV 5/5] END ...............C=10, max_iter=1000;, score=0.876 total time=   0.7s\n",
+      "[CV 5/5] END ...............C=10, max_iter=1000;, score=0.876 total time=   0.8s\n",
       "[CV 1/5] END ................C=50, max_iter=100;, score=0.888 total time=   0.0s\n"
      ]
     },
@@ -967,7 +955,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 5/5] END ................C=50, max_iter=500;, score=0.885 total time=   0.6s\n"
+      "[CV 5/5] END ................C=50, max_iter=500;, score=0.885 total time=   0.5s\n"
      ]
     },
     {
@@ -1009,7 +997,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 2/5] END ...............C=50, max_iter=1000;, score=0.870 total time=   1.1s\n"
+      "[CV 2/5] END ...............C=50, max_iter=1000;, score=0.870 total time=   1.2s\n"
      ]
     },
     {
@@ -1030,7 +1018,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 3/5] END ...............C=50, max_iter=1000;, score=0.882 total time=   1.3s\n"
+      "[CV 3/5] END ...............C=50, max_iter=1000;, score=0.882 total time=   1.2s\n"
      ]
     },
     {
@@ -1051,37 +1039,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 4/5] END ...............C=50, max_iter=1000;, score=0.887 total time=   1.5s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pvpch\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "C:\\Users\\pvpch\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV 5/5] END ...............C=50, max_iter=1000;, score=0.886 total time=   1.5s\n",
-      "[CV 1/5] END ...............C=100, max_iter=100;, score=0.887 total time=   0.1s\n"
+      "[CV 4/5] END ...............C=50, max_iter=1000;, score=0.887 total time=   1.1s\n"
      ]
     },
     {
@@ -1110,8 +1068,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 2/5] END ...............C=100, max_iter=100;, score=0.870 total time=   0.1s\n",
-      "[CV 3/5] END ...............C=100, max_iter=100;, score=0.883 total time=   0.1s"
+      "[CV 5/5] END ...............C=50, max_iter=1000;, score=0.886 total time=   1.2s\n",
+      "[CV 1/5] END ...............C=100, max_iter=100;, score=0.887 total time=   0.0s\n"
      ]
     },
     {
@@ -1140,9 +1098,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[CV 2/5] END ...............C=100, max_iter=100;, score=0.870 total time=   0.0s\n",
+      "[CV 3/5] END ...............C=100, max_iter=100;, score=0.883 total time=   0.1s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pvpch\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
-      "[CV 4/5] END ...............C=100, max_iter=100;, score=0.885 total time=   0.1s\n",
-      "[CV 5/5] END ...............C=100, max_iter=100;, score=0.888 total time=   0.1s\n"
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "C:\\Users\\pvpch\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV 4/5] END ...............C=100, max_iter=100;, score=0.885 total time=   0.0s\n",
+      "[CV 5/5] END ...............C=100, max_iter=100;, score=0.888 total time=   0.0s\n"
      ]
     },
     {
@@ -1163,7 +1150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 1/5] END ...............C=100, max_iter=500;, score=0.885 total time=   0.7s\n"
+      "[CV 1/5] END ...............C=100, max_iter=500;, score=0.885 total time=   0.5s\n"
      ]
     },
     {
@@ -1184,7 +1171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 2/5] END ...............C=100, max_iter=500;, score=0.875 total time=   0.8s\n"
+      "[CV 2/5] END ...............C=100, max_iter=500;, score=0.875 total time=   0.5s\n"
      ]
     },
     {
@@ -1247,7 +1234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 5/5] END ...............C=100, max_iter=500;, score=0.894 total time=   0.7s\n"
+      "[CV 5/5] END ...............C=100, max_iter=500;, score=0.894 total time=   0.6s\n"
      ]
     },
     {
@@ -1268,7 +1255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 1/5] END ..............C=100, max_iter=1000;, score=0.887 total time=   1.4s\n"
+      "[CV 1/5] END ..............C=100, max_iter=1000;, score=0.887 total time=   1.2s\n"
      ]
     },
     {
@@ -1289,7 +1276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 2/5] END ..............C=100, max_iter=1000;, score=0.874 total time=   1.5s\n"
+      "[CV 2/5] END ..............C=100, max_iter=1000;, score=0.874 total time=   1.2s\n"
      ]
     },
     {
@@ -1310,7 +1297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 3/5] END ..............C=100, max_iter=1000;, score=0.886 total time=   1.5s\n"
+      "[CV 3/5] END ..............C=100, max_iter=1000;, score=0.886 total time=   1.3s\n"
      ]
     },
     {
@@ -1331,7 +1318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 4/5] END ..............C=100, max_iter=1000;, score=0.890 total time=   1.5s\n"
+      "[CV 4/5] END ..............C=100, max_iter=1000;, score=0.890 total time=   1.2s\n"
      ]
     },
     {
@@ -1352,7 +1339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 5/5] END ..............C=100, max_iter=1000;, score=0.894 total time=   1.5s\n"
+      "[CV 5/5] END ..............C=100, max_iter=1000;, score=0.894 total time=   1.3s\n"
      ]
     },
     {
@@ -1418,13 +1405,13 @@
      "text": [
       "                precision    recall  f1-score   support\n",
       "\n",
-      "     Confirmed       0.81      0.67      0.73       411\n",
-      "False Positive       0.75      0.84      0.79       455\n",
-      "     Candidate       0.98      0.99      0.99       882\n",
+      "     Confirmed     0.8076    0.6740    0.7347       411\n",
+      "False Positive     0.7510    0.8418    0.7938       455\n",
+      "     Candidate     0.9799    0.9943    0.9871       882\n",
       "\n",
-      "      accuracy                           0.88      1748\n",
-      "     macro avg       0.85      0.84      0.84      1748\n",
-      "  weighted avg       0.88      0.88      0.88      1748\n",
+      "      accuracy                         0.8793      1748\n",
+      "     macro avg     0.8461    0.8367    0.8385      1748\n",
+      "  weighted avg     0.8798    0.8793    0.8774      1748\n",
       "\n"
      ]
     }
@@ -1434,7 +1421,7 @@
     "predictions = grid.predict(X_test_scaled)\n",
     "\n",
     "from sklearn.metrics import classification_report\n",
-    "print(classification_report(y_test, predictions,\n",
+    "print(classification_report(y_test, predictions, digits=4,\n",
     "                            target_names = [\"Confirmed\", \"False Positive\", \"Candidate\"]))"
    ]
   },
