--- a/random_forest_model.ipynb
+++ b/random_forest_model.ipynb
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1022,13 +1022,13 @@
      "text": [
       "                precision    recall  f1-score   support\n",
       "\n",
-      "     Confirmed       0.79      0.69      0.74       411\n",
-      "False Positive       0.78      0.82      0.80       455\n",
-      "     Candidate       0.96      0.99      0.98       882\n",
+      "     Confirmed     0.7917    0.6934    0.7393       411\n",
+      "False Positive     0.7792    0.8220    0.8000       455\n",
+      "     Candidate     0.9648    0.9932    0.9788       882\n",
       "\n",
-      "      accuracy                           0.88      1748\n",
-      "     macro avg       0.85      0.84      0.84      1748\n",
-      "  weighted avg       0.88      0.88      0.88      1748\n",
+      "      accuracy                         0.8781      1748\n",
+      "     macro avg     0.8452    0.8362    0.8394      1748\n",
+      "  weighted avg     0.8758    0.8781    0.8759      1748\n",
       "\n"
      ]
     }
@@ -1038,7 +1038,7 @@
     "predictions = grid.predict(X_test_scaled2)\n",
     "\n",
     "from sklearn.metrics import classification_report\n",
-    "print(classification_report(y_test, predictions,\n",
+    "print(classification_report(y_test, predictions, digits=4,\n",
     "                            target_names = [\"Confirmed\", \"False Positive\", \"Candidate\"]))"
    ]
   },
